SigmaCodebackup3rdSep/objects/Freight_Packaging_Quotes__c.object
<CustomObject>
    <fields>
        <fullName>Account_to_charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account to charge</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supply &amp; Services</relationshipLabel>
        <relationshipName>Freight_Packaging_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Charges_Post_Commissions__c</fullName>
        <label>Additional Charges (Post Commissions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_to_on_charge__c</fullName>
        <label>Amount to on-charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cease_Charging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cease Charging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Cease_Date__c</fullName>
        <label>Charge Cease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ongoing_Charge_To_Commence__c</fullName>
        <label>Date Ongoing Charge To Commence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expenditure_Record_Count__c</fullName>
        <label>Expenditure Record Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Other_please_specify__c</fullName>
        <label>If &quot;Other&quot; please specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Charge_Type__c</fullName>
        <label>On-Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Off</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oncharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oncharge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Project_If_Any__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project (If Any)</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>Supply &amp; Services</relationshipLabel>
        <relationshipName>Supply_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_Address_If_Required__c</fullName>
        <label>Storage Address (If Required)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Storage_End_Date__c</fullName>
        <label>Storage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storage_Start_Date__c</fullName>
        <label>Storage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supply &amp; Services (Supplier Name)</relationshipLabel>
        <relationshipName>Supply_Services</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supply_Service_Stage__c</fullName>
        <label>Supply &amp; Service Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Quote Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expenditure__c</fullName>
        <label>Total Expenditure</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product2_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Supply &amp; Services</relationshipLabel>
        <relationshipName>Supply_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supply &amp; Service</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Supply &amp; Service Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply &amp; Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>